test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/redeclare_fun_as_file_scope_var.plx
pub fn foo(none) i32;

#  this conflict with the previous declaration of foo as a function 
pub foo: i32;

pub fn main(none) i32 {
    return 0
}

